# selecta

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE.txt  README.md  README.rst  fuzzytest.py  pyproject.toml  requirements.txt  selecta  selecta.py  setup.py  test.txt
.github/workflows/: python-package.yml
selecta/: __init__.py
src/selecta/: __init__.py  fuzzy.py
src/selecta/commands/: selecta_add_keybinding.py  selecta_install_bash  selecta_install_bash.py  selecta_install_zsh  selecta_install_zsh.py
tests/: test_history.txt  test_selecta.py  tests.py
tests/data/: history.txt  test.txt  test_history.txt
